{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 96,
  "lineage": "195fad57-cfff-34db-b795-2eaac773de9b",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_private_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db6c6238a40c0681",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-006dc4e6fb594c424",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006dc4e6fb594c424",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0548b877a42fbe5b7",
            "private_dns": "ip-10-0-2-107.ec2.internal",
            "private_ip": "10.0.2.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be5f5d062b095bfc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0feb35adfe34c77ce",
            "tags": {
              "Name": "app-private-instance1"
            },
            "tags_all": {
              "Name": "app-private-instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b57ff4431bc92ed"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.private_subnet1",
            "module.network.aws_vpc.main",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_security_group.private_http_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_public_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db6c6238a40c0681",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-0d796c23660225959",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d796c23660225959",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05bb9c2565d1daf5d",
            "private_dns": "ip-10-0-1-43.ec2.internal",
            "private_ip": "10.0.1.43",
            "public_ip": "3.231.158.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017106d98ff2ff024",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f133108fe7ee4c6",
            "tags": {
              "Name": "app-instance1"
            },
            "tags_all": {
              "Name": "app-instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-052942f091fd90ea9"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_public_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db6c6238a40c0681",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-0679bd3a08d771411",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0679bd3a08d771411",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a4aadc7c36ecd27",
            "private_dns": "ip-10-0-3-69.ec2.internal",
            "private_ip": "10.0.3.69",
            "public_ip": "3.91.47.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f53c534675e63788",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fba8dc15148d501",
            "tags": {
              "Name": "app-instance2"
            },
            "tags_all": {
              "Name": "app-instance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-052942f091fd90ea9"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db6c6238a40c0681",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-084b92234f0fdf51e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084b92234f0fdf51e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02a3cf4e7c60e54a7",
            "private_dns": "ip-10-0-1-234.ec2.internal",
            "private_ip": "10.0.1.234",
            "public_ip": "184.73.36.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060d9c5669d8126ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f133108fe7ee4c6",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-052942f091fd90ea9"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:loadbalancer/app/terraform-hello-main-alb/3e83253e2618a4e1",
            "arn_suffix": "app/terraform-hello-main-alb/3e83253e2618a4e1",
            "dns_name": "terraform-hello-main-alb-1338636262.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:loadbalancer/app/terraform-hello-main-alb/3e83253e2618a4e1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-hello-main-alb",
            "security_groups": [
              "sg-04107c5f92565c8f3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f133108fe7ee4c6"
              },
              {
                "subnet_id": "subnet-09fba8dc15148d501"
              }
            ],
            "subnets": [
              "subnet-02f133108fe7ee4c6",
              "subnet-09fba8dc15148d501"
            ],
            "tags": {
              "Name": "terraform-hello-main-alb"
            },
            "tags_all": {
              "Name": "terraform-hello-main-alb"
            },
            "vpc_id": "vpc-0a8fefad93edbaddc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:listener/app/terraform-hello-main-alb/3e83253e2618a4e1/2437a073230385a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/16cfdd9da96748df",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:listener/app/terraform-hello-main-alb/3e83253e2618a4e1/2437a073230385a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:loadbalancer/app/terraform-hello-main-alb/3e83253e2618a4e1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main",
            "module.load_balancers.aws_lb.main",
            "module.load_balancers.aws_lb_target_group.target_group_app1"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/16cfdd9da96748df",
            "arn_suffix": "targetgroup/terraform-hello-app1/16cfdd9da96748df",
            "deregistration_delay": 1800,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/16cfdd9da96748df",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-hello-app1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targets_app1_target1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/16cfdd9da96748df-20210527075322327800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/16cfdd9da96748df",
            "target_id": "i-0d796c23660225959"
          },
          "dependencies": [
            "module.instances.aws_instance.app_public_instance1",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.load_balancers.aws_lb_target_group.target_group_app1",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targets_app1_target2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/16cfdd9da96748df-20210527075300003400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/16cfdd9da96748df",
            "target_id": "i-0679bd3a08d771411"
          },
          "dependencies": [
            "module.instances.aws_instance.app_public_instance2",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.load_balancers.aws_lb_target_group.target_group_app1",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03e4a618ec5b922ef",
            "domain": "vpc",
            "id": "eipalloc-07471d3f35891c1e8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0545766bc274db38e",
            "private_dns": "ip-10-0-1-147.ec2.internal",
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-34-196-43-172.compute-1.amazonaws.com",
            "public_ip": "34.196.43.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "-ngw-eip"
            },
            "tags_all": {
              "Name": "-ngw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:internet-gateway/igw-075a9dbbbac06f96a",
            "id": "igw-075a9dbbbac06f96a",
            "owner_id": "549815925956",
            "tags": {
              "Name": "-igw"
            },
            "tags_all": {
              "Name": "-igw"
            },
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07471d3f35891c1e8",
            "id": "nat-079ba9285e8dd3fa6",
            "network_interface_id": "eni-0545766bc274db38e",
            "private_ip": "10.0.1.147",
            "public_ip": "34.196.43.172",
            "subnet_id": "subnet-02f133108fe7ee4c6",
            "tags": {
              "Name": "-ngw"
            },
            "tags_all": {
              "Name": "-ngw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:route-table/rtb-0d45e14bc71dc1157",
            "id": "rtb-0d45e14bc71dc1157",
            "owner_id": "549815925956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079ba9285e8dd3fa6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-private"
            },
            "tags_all": {
              "Name": "-private"
            },
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:route-table/rtb-0383ad92a3fdb0d72",
            "id": "rtb-0383ad92a3fdb0d72",
            "owner_id": "549815925956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075a9dbbbac06f96a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-public"
            },
            "tags_all": {
              "Name": "-public"
            },
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e8b24d8c8add1c5",
            "route_table_id": "rtb-0d45e14bc71dc1157",
            "subnet_id": "subnet-0feb35adfe34c77ce"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route_table.route_table_private",
            "module.network.aws_subnet.private_subnet1",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main",
            "module.network.aws_eip.nat_eip"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d77c323f72000b32",
            "route_table_id": "rtb-0d45e14bc71dc1157",
            "subnet_id": "subnet-0fef1e551b8807eac"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route_table.route_table_private",
            "module.network.aws_subnet.private_subnet2",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09181340036823f5c",
            "route_table_id": "rtb-0383ad92a3fdb0d72",
            "subnet_id": "subnet-02f133108fe7ee4c6"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.route_table_public",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0dc14e55e08083a",
            "route_table_id": "rtb-0383ad92a3fdb0d72",
            "subnet_id": "subnet-09fba8dc15148d501"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.route_table_public",
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_default_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-04107c5f92565c8f3",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04107c5f92565c8f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-main-sec-group",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-main-sec-group"
            },
            "tags_all": {
              "Name": "alb-main-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-052942f091fd90ea9",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052942f091fd90ea9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04107c5f92565c8f3"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "116.74.215.184/32",
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-http-ssh",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-http-ssh"
            },
            "tags_all": {
              "Name": "default-http-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-02b57ff4431bc92ed",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b57ff4431bc92ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-http-ssh",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-http-ssh"
            },
            "tags_all": {
              "Name": "private-http-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-08bbf945871b13fca",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bbf945871b13fca",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sec-group",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sec-group"
            },
            "tags_all": {
              "Name": "rds-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-0feb35adfe34c77ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0feb35adfe34c77ce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-private-1"
            },
            "tags_all": {
              "Name": "-private-1"
            },
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-0fef1e551b8807eac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0fef1e551b8807eac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-private-2"
            },
            "tags_all": {
              "Name": "-private-2"
            },
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-02f133108fe7ee4c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02f133108fe7ee4c6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-public-1"
            },
            "tags_all": {
              "Name": "-public-1"
            },
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-09fba8dc15148d501",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09fba8dc15148d501",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-public-2"
            },
            "tags_all": {
              "Name": "-public-2"
            },
            "vpc_id": "vpc-0a8fefad93edbaddc"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:vpc/vpc-0a8fefad93edbaddc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055c9d798612a3ef6",
            "default_route_table_id": "rtb-0d2d8cfc294bd4377",
            "default_security_group_id": "sg-0691ca9c9251f787f",
            "dhcp_options_id": "dopt-ccc7f6b6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a8fefad93edbaddc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d2d8cfc294bd4377",
            "owner_id": "549815925956",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}